fix: z-index issue with mobile footer

--- a/app/_components/MobileFooter/mobileFooter.module.css
+++ b/app/_components/MobileFooter/mobileFooter.module.css
@@ -7,7 +7,7 @@
   height: calc(68px + env(safe-area-inset-bottom));
   left: 0;
   right: 0;
-  z-index: var(--zIndex-navBar);
+  z-index: 10;
 }
 
 .nav-icons-wrapper {
